fixed issue with strange css being inserted for PDFs (.pdfViewer.page) that causes the page to jump when deselected.  fixed by labeling all css pdfViewerDash instead of pdfViewer

--- a/src/client/views/nodes/PDFBox.scss
+++ b/src/client/views/nodes/PDFBox.scss
@@ -199,7 +199,7 @@
 }
 
 .pdfBox {
-    .pdfViewer-text {
+    .pdfViewerDash-text {
         .textLayer {
             span {
                 user-select: none;
@@ -210,7 +210,7 @@
 
 .pdfBox-interactive {
     pointer-events: all;
-    .pdfViewer-text {
+    .pdfViewerDash-text {
         .textLayer {
             span {
                 user-select: text;
